# llm-batch

./: CMakeLists.txt  README.md
build_audit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_batch.vcxproj  basic_batch.vcxproj.filters  checkpoint_batch.vcxproj  checkpoint_batch.vcxproj.filters  file_batch.vcxproj  file_batch.vcxproj.filters  llm-batch.sln  resumable_batch.vcxproj  resumable_batch.vcxproj.filters
build_audit/basic_batch.dir/Debug/: basic_batch.exe.recipe
build_audit/basic_batch.dir/Debug/basic_batch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/checkpoint_batch.dir/Debug/: checkpoint_batch.exe.recipe
build_audit/checkpoint_batch.dir/Debug/checkpoint_batch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/file_batch.dir/Debug/: file_batch.exe.recipe
build_audit/file_batch.dir/Debug/file_batch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/resumable_batch.dir/Debug/: resumable_batch.exe.recipe
build_audit/resumable_batch.dir/Debug/resumable_batch.tlog/: CL.command.1.tlog  (+8 more)
examples/: basic_batch.cpp  checkpoint_batch.cpp  file_batch.cpp  resumable_batch.cpp
include/: llm_batch.hpp
(+6 files in other folders)
